@@ -6,7 +6,7 @@
 	<groupId>com.github.sdrss</groupId>
 	<artifactId>reportng</artifactId>
 	<packaging>jar</packaging>
-	<version>2.2.2</version>
+	<version>2.2.3</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
