@@ -11,7 +11,7 @@ retries=Retries
 failed.tooltip=Some tests failed.
 failedConfiguration=Failed Configuration
 failedTests=Failed
-generatedBy=Generated by <a href="http://www.testng.org" target="_top">TestNG</a> with <a href="https://github.com/sdrss/reportNG" target="_top">ReportNG v2.2.2</a><br>
+generatedBy=Generated by <a href="http://www.testng.org" target="_top">TestNG</a> with <a href="https://github.com/sdrss/reportNG" target="_top">ReportNG v2.2.3</a><br>
 groups=Groups
 groupsFor=Groups for
 logOutput=Log Output
@@ -122,3 +122,5 @@ clickKnownIssues=Click to view All Known Issues.
 clickFixedIssuesRegressionTests=Click to view Fixed Issues for Regression Tests.
 clickFixedIssuesFeatureTests=Click to view Fixed Issues for New Feature Tests.
 clickFixedIssues=Click to view All Fixed Issues.
+packages=Package Results
+package=Package
