@@ -1,0 +1,39 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="$messages.locale.language" lang="$messages.locale.language">
+<head>
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+  <meta name="description" content="TestNG unit test results." />
+  <link rel="stylesheet" href="css/reportng.css" />
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <script type="text/javascript" src="js/jquery-1.12.0.min.js"></script> 
+  <script type="text/javascript" src="js/jquery.tablesorter.min.js"></script>
+  <script type="text/javascript" src="js/reportng.js"></script>
+  <script type="text/javascript">$(document).ready(function(){$('#suiteResults').tablesorter({});});</script>
+</head>
+<body onload="return false;">
+<div class="row">
+	<div class="col-xs-12">
+	<h3 class="normal" style="float: left;">$messages.getString("packages")</h3><br>
+    </div>
+</div>
+<br>
+<div class="well well-large">
+<table class="table table-bordered" id="suiteResults">
+	<thead>
+   		<tr class="columnHeadings">
+   			<th class="header" align="left">$messages.getString("package")</th>
+   		 	<th class="header">$messages.getString("duration")</th>
+   		 	<th class="header passed number">$messages.getString("passed")</th>
+    		<th class="header failed number">$messages.getString("failedTests")</th>
+    		<th class="header skipped number">$messages.getString("skipped")</th>
+	    	<th class="header knownDefects number">$messages.getString("knownDefects")</th>
+	    	<th class="header fixed number">$messages.getString("fixed")</th>
+  		</tr>
+  	</thead>
+  	$utils.getPackages($suites)
+</table>
+</div>
+</body>
+</html>
