@@ -2,6 +2,7 @@ V2.2.3 * Hover for features and issues
        * Hover for Issues table in overview page
        * Tooltip text in overview page
        * Blue Color for expand/collapse features and issues
+       * New Results menu. Show results per package 
        * 
 V2.2.2 * Sort Suites
        * Sort Tests
